# fh-plotly

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: app-gh-pages.yml  ci.yml  ruff.yml
examples/: bloch.py  callback_app.py  fhCallbacks.js  test_app.py
fh_plotly/: __init__.py  p2fh.py
tests/: conftest.py  test_p2fh.py
