[tool.poetry]
name = "fh-plotly"
version = "0.1.1"
description = "Poetry in FastHTML"
authors = ["Carlo Lepelaars <info@carlolepelaars.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-fasthtml = ">=0.4.0"
plotly = "^5.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pandas = "^2.2.2"
numpy = "^2.0.1"
fastcore = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
